--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -362,6 +362,7 @@ h1, h2, h3, h4, h5, h6 {
     &-prev{
         left: 10%;
         background: url(../img/Vector_left.png) center no-repeat;
+        visibility: hidden;
     }
         
     &-next{
